# ChangeLog for net-misc/rsync
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.102 2006/10/17 11:40:22 uberlord Exp $

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> rsync-2.6.8-r2.ebuild:
  Added ~sparc-fbsd keyword.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> rsync-2.6.8-r2.ebuild:
  Marked stable on mips.

*rsync-2.6.8-r2 (14 May 2006)

  14 May 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rsync-2.6.8-verbose-quiet-output.patch, +rsync-2.6.8-r2.ebuild:
  Fix from upstream for output with -v and -q #133217 by lou.

*rsync-2.6.8-r1 (13 May 2006)

  13 May 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rsync-2.6.8-fix-deferred-msgs.patch, +rsync-2.6.8-r1.ebuild:
  Fix from upstream for broken transfers #133054 by Wernfried Haas.

  03 May 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fix Manifest (ChangeLog changed without a Manifest update).

  30 Apr 2006; Bryan Østergaard <kloeri@gentoo.org> rsync-2.6.8.ebuild:
  Stable on alpha + ia64.

  29 Apr 2006; Rene Nussbaumer <killerfox@gentoo.org> rsync-2.6.8.ebuild:
  Stable on hppa.

  29 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org> rsync-2.6.8.ebuild:
  Stable on sparc

  29 Apr 2006; <tcort@gentoo.org> rsync-2.6.8.ebuild:
  Stable on amd64.

  29 Apr 2006; Markus Rothe <corsair@gentoo.org> rsync-2.6.8.ebuild:
  Stable on ppc64

  29 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org> rsync-2.6.8.ebuild:
  ppc stable

  29 Apr 2006; Mark Loeser <halcy0n@gentoo.org> rsync-2.6.8.ebuild:
  Stable on x86

*rsync-2.6.8 (23 Apr 2006)

  23 Apr 2006; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.8.ebuild:
  Version bump #130898 by Kilburn Abrahams.

*rsync-2.6.7-r1 (08 Apr 2006)

  08 Apr 2006; Mike Frysinger <vapier@gentoo.org> -rsync-2.6.7.ebuild,
  +rsync-2.6.7-r1.ebuild:
  Fix acl/xattr configure options #129116 by Alexander Skwar.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> rsync-2.6.7.ebuild: