@@ -18,23 +18,28 @@ AUX rsyncd.conf.d 149 RMD160 0c2d0e34d1467fc0ec460760b49d621231c8e562 SHA1 fda56
 MD5 e5e62e8cef29e09c22e8ba8152ec1751 files/rsyncd.conf.d 149
 RMD160 0c2d0e34d1467fc0ec460760b49d621231c8e562 files/rsyncd.conf.d 149
 SHA256 de758791b16b89a648c01867af7f51bc9bd44e40cbe868e439b753ff5d9572e5 files/rsyncd.conf.d 149
-AUX rsyncd.init.d 462 RMD160 d012b36a4ef76d1671c4c523b6c7ad693fb96f20 SHA1 0e503a0ea4b8df3a66a4a1ffdd7e4e93bdbb6acf SHA256 76d7aaf0f63af4485da8a3866d086ba68c64814ba84d9e6900be403869d48301
-MD5 ddcee72c7a75006079dab168263fa246 files/rsyncd.init.d 462
-RMD160 d012b36a4ef76d1671c4c523b6c7ad693fb96f20 files/rsyncd.init.d 462
-SHA256 76d7aaf0f63af4485da8a3866d086ba68c64814ba84d9e6900be403869d48301 files/rsyncd.init.d 462
+AUX rsyncd.init.d 486 RMD160 2c76cf53aff8ec216d22aa84f15d7000f5681c6f SHA1 f248d43840123ea93a176634cc808149c933f3b1 SHA256 1618c2ac36eba39928e390c2fd1bcbace948cc0cc2b954e0f209d78a37cbf495
+MD5 12cacb4a5ce155bf050321b944d66b97 files/rsyncd.init.d 486
+RMD160 2c76cf53aff8ec216d22aa84f15d7000f5681c6f files/rsyncd.init.d 486
+SHA256 1618c2ac36eba39928e390c2fd1bcbace948cc0cc2b954e0f209d78a37cbf495 files/rsyncd.init.d 486
 AUX rsyncd.xinetd 194 RMD160 0547874540416f5c27882d8cbceb167a39e1d2d8 SHA1 d48ef0238a65d871d5d6e982e2842d1e57ba2f4c SHA256 17162f014242c9d5003578bed44b89cd2dc4f0ce2a200ac1facaa10a9aac8692
 MD5 e2b738ceac3dd3223549964e749e5f2d files/rsyncd.xinetd 194
 RMD160 0547874540416f5c27882d8cbceb167a39e1d2d8 files/rsyncd.xinetd 194
 SHA256 17162f014242c9d5003578bed44b89cd2dc4f0ce2a200ac1facaa10a9aac8692 files/rsyncd.xinetd 194
 DIST rsync-2.6.8.tar.gz 772314 RMD160 f01bd6c6d28f7cf888be640c4d3b2406bba28385 SHA1 2ac54feed46054ced334eb0a234ada18aee53d9c SHA256 784782de0efee0b4624bdd1d75d524ef95d16354cb13cbb5449d990b61e607a6
+DIST rsync-2.6.9.tar.gz 811841 RMD160 36d270d9f01e9a8e808f426196796001bdd3d5d2 SHA1 341618e230ea2e0e551d0ccf06f840d4f824c843 SHA256 ca437301becd890e73300bc69a39189ff1564baa761948ff149b3dd7bde633f9
 EBUILD rsync-2.6.8-r2.ebuild 2666 RMD160 dcc1704fad825b674541f797625d0c3b05209879 SHA1 6581a484e24579a2d9666222c24a9fec2bb7b4e4 SHA256 76f3fb9ebcc9b38486233a50f19005322ada8cd7f0ac20f0b1cd46cde1574a70
 MD5 0d887e8abf082c657b5366547794ac23 rsync-2.6.8-r2.ebuild 2666
 RMD160 dcc1704fad825b674541f797625d0c3b05209879 rsync-2.6.8-r2.ebuild 2666
 SHA256 76f3fb9ebcc9b38486233a50f19005322ada8cd7f0ac20f0b1cd46cde1574a70 rsync-2.6.8-r2.ebuild 2666
-MISC ChangeLog 13284 RMD160 dc36a4e3f99d28bb0bd6c0abc00f9f291dfa166a SHA1 07c2d40135010758885d03cfb194895842f9297a SHA256 fd72b098dc82fd92392034176f65e99fc6a4af469f67f2cef53f4f99d8053abf
-MD5 451bd42a3c2681fa7f1cd8509db2c9ce ChangeLog 13284
-RMD160 dc36a4e3f99d28bb0bd6c0abc00f9f291dfa166a ChangeLog 13284
-SHA256 fd72b098dc82fd92392034176f65e99fc6a4af469f67f2cef53f4f99d8053abf ChangeLog 13284
+EBUILD rsync-2.6.9.ebuild 2202 RMD160 8a678b34786da1e44a6d1d437ea9cd3a79e0aec4 SHA1 e9c33e96d19bc10172ff85a89bb97d4513b81a33 SHA256 3ada21bba86aa5ba8b6f51798a817b19f8b349be52ddcc3a0b35b230f98e9455
+MD5 fb8b4348795c5c5b3ce738d33fb07790 rsync-2.6.9.ebuild 2202
+RMD160 8a678b34786da1e44a6d1d437ea9cd3a79e0aec4 rsync-2.6.9.ebuild 2202
+SHA256 3ada21bba86aa5ba8b6f51798a817b19f8b349be52ddcc3a0b35b230f98e9455 rsync-2.6.9.ebuild 2202
+MISC ChangeLog 13426 RMD160 4fd8c3ae321793365113d3ba29653e2765234680 SHA1 8d07517806c0bf53d091d0722a1b0028a2e7ae1d SHA256 8df15953d3ff00cd78091c81d667cce5014b4096139f47e27fe761a3ab9e5845
+MD5 69706c2149cfc9b1af70aef6fd32c1d1 ChangeLog 13426
+RMD160 4fd8c3ae321793365113d3ba29653e2765234680 ChangeLog 13426
+SHA256 8df15953d3ff00cd78091c81d667cce5014b4096139f47e27fe761a3ab9e5845 ChangeLog 13426
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -42,3 +47,6 @@ SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata
 MD5 41cb6cb57de67daaa9f08c143309eee3 files/digest-rsync-2.6.8-r2 235
 RMD160 c6900a235985b17ea63dc2d85460901d94ed3cff files/digest-rsync-2.6.8-r2 235
 SHA256 db6586c22adcb91ef50be62ec39d19e233d47868c93d087780853c657c356a4c files/digest-rsync-2.6.8-r2 235
+MD5 b7c43d63ebd1fc4f11b181745ce98f96 files/digest-rsync-2.6.9 235
+RMD160 38e28736f704de5bceb9edf25034693e0192118d files/digest-rsync-2.6.9 235
+SHA256 3b24d2cc4f4676a8760a13ad08252df7317ca597118a290a51f624d099b00044 files/digest-rsync-2.6.9 235
