@@ -1,4 +1,4 @@
-#!/sbin/runscript
+#!@GENTOO_PORTAGE_EPREFIX@/sbin/runscript
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/files/rsyncd.init.d,v 1.4 2004/10/21 01:10:48 vapier Exp $
