@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/rsync
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.102 2006/10/17 11:40:22 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.103 2006/11/07 23:15:57 vapier Exp $
+
+*rsync-2.6.9 (07 Nov 2006)
+
+  07 Nov 2006; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.9.ebuild:
+  Version bump #154347 by Kilburn Abrahams.
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org> rsync-2.6.8-r2.ebuild:
   Added ~sparc-fbsd keyword.
